# alkahest

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: beta-test.yml  nightly-build.yml  nightly-release.yml  nightly-test.yml  pre-release.yml
alkahest/: Cargo.toml
alkahest-abi/: Cargo.toml
alkahest-core/: Cargo.toml
alkahest-diagnostics/: Cargo.toml
alkahest-diagnostics/src/: diagnostic.rs  lib.rs
alkahest-internal/: Cargo.toml
alkahest-internal/src/: lib.rs
alkahest-internal/src/mem/: addr.rs
alkahest-internal/src/sync/: bmlock.rs  mod.rs  vlock.rs
alkahest-lexer/: Cargo.toml
alkahest-lexer/src/: lib.rs  token.rs
alkahest-macros/: Cargo.toml
alkahest-modules/: Cargo.toml
alkahest-modules/src/: lib.rs  metadata.rs
alkahest-parser/: Cargo.toml
alkahest-parser/src/: lib.rs
alkahest-session/: Cargo.toml
alkahest-session/src/: lib.rs
alkahest-utils/: Cargo.toml
alkahest/src/: lib.rs
docs/: athanor_architecture.md
