[workspace]
resolver = "3"
members = ["alkahest", "alkahest-*"]

[workspace.package]
authors = ["Azoth Foundation <contact@azoth.org>"]
version = "0.1.1"
edition = "2024"

[workspace.dependencies]
alkahest-diagnostics = { path = "./alkahest-diagnostics" }
alkahest-session = { path = "./alkahest-session" }
