[workspace]
resolver = "3"
members = ["alkahest", "alkahest-*"]

[workspace.package]
repository = "https://github.com/azoth-org/alkahest"
authors = ["Azoth Foundation <contact@azoth.org>"]
license-file = "./LICENSE"
version = "0.1.1"
edition = "2024"

[workspace.dependencies]
alkahest-diagnostics = { path = "./alkahest-diagnostics" }
alkahest-session = { path = "./alkahest-session" }
