[package]
name = "alkahest-macros"
description = "Alkahest Macros"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license-file = { workspace = true }
repository = { workspace = true }

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.104"
quote = "1.0.42"
syn = { version = "2.0.112", default-features = false, features = ["full"] }